Added /use replacing p!use
- Remove p!flee for now
- Changed Duel turn action submissions to use an enum instead of chars
- Made Duel storage a HashMap instead of List
- Fixed many issues with turn action predicates missing in the text command
- Removed the DuelChecks system
- Added DuelFlags system for disabling certain turn actions